# deployer

./: Cargo.toml  README.md
config/: config.toml
scripts/: README.md  common.sh  master_deploy.sh
src/: deployer.rs  handlers.rs  initialization.rs  logging.rs  main.rs
src/manager_mail/: mod.rs
systemd/: README.md  mydeployer.service  start.sh
