[package]
name = "deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-server = "0.8"
tokio = { version = "1.48", features = ["rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.11"
toml = "0.9.8"
log4rs = "1.4"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
subtle = "2.6"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"